fixed white bar on the side and uneven map (css)

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,10 +31,11 @@
   z-index: 500;
 }
 .main-content {
-  margin-left: 192px;
+  margin-left: 190px;
   margin-top: 56px;
   height: calc(100vh - 56px);
-  overflow-y: auto; 
+  width: 90%;
+  overflow-y: auto;
 }
 .custom-text {
   font-weight: bold; 
